Put date fields side by side, sort out header z-index issues and body scroll issues on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -40,9 +40,8 @@ html, body {
 }
 
 .bs-component {
-    height: 100%;
+    min-height: 100%;
     padding: 80px 0;
-    overflow: auto;
     -webkit-overflow-scrolling: touch;
 
     > .container {
@@ -169,10 +168,8 @@ html, body {
 }
 
 .project-container {
-    height: 100%;
     margin: auto;
     background-color: white;
-    overflow: scroll;
     
     .task-count {
         color: rgb(150,150,150);
@@ -370,6 +367,16 @@ html, body {
             margin-bottom: 30px
         }
 
+        .double-group {
+            display: flex;
+            margin: 0 -5px 20px;
+
+            .form-group {
+                margin: 0 5px;
+                flex-grow: 1;
+            }
+        }
+
         .form-group {
             margin: 0 0 20px;
         }
@@ -425,7 +432,7 @@ html, body {
 
 }
 
-@media (min-width: 600px) {
+@media (min-width: 576px) {
     .tasks-grid {
         flex-wrap: wrap;
     }
@@ -440,6 +447,14 @@ html, body {
 
     .project-container .section .tasks-container .task .task-body .task-details .control .actions {
         display: flex;
+    }
+}
+
+@media (max-width: 575px) {
+    .add-task-container form.add-task {
+        select, input {
+            font-size: 13px;
+        }
     }
 }
 
